static/css/dashboardstyles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); 

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-style: normal;
}

body {
    display: flex;
    background-color: #133D8C;
}

h1 {
    font-size: 95px;
}

h2 {
    font-size: 38px;
}


h3 {
    font-size: 25px;
}

h4 {
    font-size: 16px;
}

h5 {
    font-size: 12px;
}

button {
    border-style: none;
}

.bolder {
    font-weight: bolder;
}

.uppercase {
    text-transform: uppercase;
}

/* menu bar */

.sidenav {
    height: 100%; 
    width: 0; 
    position: fixed; 
    z-index: 2; 
    top: 0; 
    left: 0;
    background-color: #171717; 
    overflow-x: hidden; 
    overflow-y: hidden;
    transition: 0.5s; 
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
}

.sidenav .closebtn {
    position: absolute;
    top: 5px;
    right: 1rem;
    font-size: 36px;
    margin-left: 50px;
    text-decoration: none;
    color: #818181;
    transition: 0.3s;
}

.sidenav .closebtn:hover {  
    color: white;
}

.menu {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 360px;
    background: #133D8C;
}

.title_section {
    display: flex;
    height: 200px;
    width: 100%;
}


.title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width:100%;
    gap: 8px;
    padding: 1rem;
}

.title_div {
    display: flex;
}

.title_div h2{
    font-weight: bolder;
    color: white;
}

.logo {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 130px;
}

.website_logo_img {
    height: 100px;
}

.logo_title h1{
    font-weight: bolder;
    color: white;
    width: 100%;
}

.division_section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 8px;
    height: 100%;
    width: 100%;
}

.division_list_container {
    display: flex;
    flex-direction: column;
    height: 225px;
    width: 330px;
}

.division_list {
    display: flex;
    justify-content: center;
    gap: 8px;
    width: 100%;
}

.division_column {
    display: flex;
    flex-direction: column;
    width: 49%;
    gap:8px;
}

.division_column_conference{
    display: flex;
    justify-content: center;
    color: white;
}

.division {
    text-align: center;
    height: 40px;
}

.division_button {
    width: 100%;
    height: 100%;
    padding: 0.3em 0.8em;
    box-shadow: 0.1em 0.1em;
    cursor: pointer;
}

.division_button:hover {
    transform: translate(-0.05em, -0.05em);
    box-shadow: 0.15em 0.15em;
}

.division_button:active {
    transform: translate(0.05em, 0.05em);
    box-shadow: 0.05em 0.05em;
}
  
.division_wide {
    text-align: center;
    height: 40px;
    width: 100%;
    margin-top: 8px;
}

.team_list_container {
    display: flex;
    flex-direction: column;
    gap:1rem;
    width: 330px;
    height: 530px;
    background: #efefef;
    padding: 1rem;
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
    border: 1px solid black;
}

.team_search_bar {
    width: 100%;
    height: 40px;
    border: none;
    border-radius: 5px;
    padding: 0 8px;
    background: #bfbfbf;
}

.team_list {
    height: 435px;
    width: 100%;
    color: #efefef;
    overflow-y:scroll;
}


.team_container {
    list-style-type: none;
}

.team_item {
    width: 100%;
    height: 60px;
    
}

.team_list_logo {
    width: 50px;
    height: 50px;
    padding: 0, 8px;
}

.team_item_button {
    display: flex;
    align-items: center;
    gap: 1rem;
    width: 100%;
    height: 60px;;
    background-color: white;
    color: #BA0C2F;
    padding: 0 16px;
}

.team_item_button h4{
    font-weight: bolder;
}

.team_item_button:hover {
    filter: brightness(90%);
}

/* dashboard */

#dashboard {
    width: 100%;
    position: relative;
    height: 100vh; 
}



#dashboard::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #133D8C;
    z-index: -1; 
    filter: brightness(140%); 
}

.nav_bar {
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 60px;
    color: #D71F36;
    background-color: #133D8C;
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
    position: fixed;
    z-index: 1;
}

.nav_left {
    display: flex;
    width: 600px;
    height: 100%;
}

.menu_button_container {
    width: 60px;
    height: 60px;

}

.menu_button {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 5px;
    width: 60px;
    height: 100%;
    background: #efefef;
    padding: 0.3em 0.8em;
    cursor: pointer;
}


.menu_button:hover {
    filter: brightness(90%); 
}

.menu_block {
    width: 35px;
    height: 5px;
    background: #133D8C;
}


.dashboard_text {
    width: 600px;
    height: 100%;
    padding: 6px 1rem;
    color: white;
}

.dashboard_text h2{
    font-weight: bolder;
}

.profile {
    display: flex;
    justify-content: end;
    height: 100%;
}

.profile_photo_container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 60px;
    height: 60px;
}

.profile_photo{
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border: 3px solid white;
}

.username {
    height: 100%;
    padding: 6px 1rem;
    text-align: end;
    color: white;
}

.username h2{
    font-weight: bolder;
}

.logout_button_container {
    width: 60px;
    height: 60px;
}

.logout_button {
    width: 60px;
    height: 60px;
    background: transparent;
}

.logout_button:hover .logout_button_img{
    filter: brightness(150%);
}

.logout_button_img {
    width: 50px;
    height: 50px;
}

.filter_bar {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    height: 100px;
    position: fixed;
    top: 70px;
    z-index: 1;
}

.player_search_bar_container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 70px;
    width: 1000px;
    background: #133D8C;
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
}

.player_search_bar {
    width: 980px;
    height: 40px;
    border: none;
    border-radius: 5px;
    padding: 0 8px;
    background: white;
}


.card_list_container {
    width: 100%;
    padding: 1rem;
    margin-top: 170px;
}

.card_grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 8px;
    justify-items: center;
    position: relative;
    overflow-y: scroll;
    overflow-x: hidden;
}

.card_grid::-webkit-scrollbar {
    display: none;
}

.card_container {
    width: 300px;
    height: 430px;
    perspective: 500px;
    position: relative;
}

.card {
    position: absolute;
    width: 300px;
    height: 430px;
    perspective: 500px;
}
  
.content {
position: absolute;
width: 100%;
height: 100%;
box-shadow: 0 0 15px rgba(0,0,0,0.1);
transition: transform 0.5s;
transform-style: preserve-3d;
}
  
.card:hover .content {
transform: rotateY( 180deg ) ;
transition: transform 0.5s;
}

.card_front {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 300px;
    height: 430px;
    background-color: black;
    color: white;
    border-radius: 5px;
    box-shadow: 0px 8px 16px #000000;
    position: absolute;
    height: 100%;
    width: 100%;
    backface-visibility: hidden;
}

.inner_card {
    width:280px;
    height: 410px;
    border-radius: 5px;
    position: relative;
}

.card_background_container {
    display: flex;
    justify-content: center;
    align-items: end;
    width: 280px;
    position: absolute;
}

.background_image {
    height: 405px;
}

.card_header {
    display: flex;
    width: 280px;
    height: 50px;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
    position: absolute;
    top: 0;
    background-color: black;
}

.card_name_container {
    height: 50px;
    width: 230px;
    padding: 10px;

}

.card_name {
    height: 30px;
    width: 170px;
    color: white;
    padding: 6px;
    position: relative;
    background-color: black;
}

.card_name h4 {
    font-weight: bolder;
}


.triangle {
    position: absolute;
    right: -20px;
    top: 0;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 0 30px 20px;
    border-color: transparent white transparent;
}

.card_team_container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
    width: 50px;
}

.team_logo {
    height: 30px;
}

.card_image_container {
    width: 280px;
    height: 250px;
    position: absolute;
    top: 50px;
}

.card_player_container {
    display: flex;
    justify-content: center;
    align-items: end;
    width: 280px;
    height: 250px;
    position: absolute;
}

.player_image {
    height: 230px;
}

.card_stats_container {
    display: flex;
    flex-direction: column;
    align-items: end;
    gap: 8px;
    width: 75px;
    height: 250px;
    padding-top: 8px;
    position: absolute;
    right: 0;
}

.card_stats {
    width: 70px;
    height: 40px;
    border-top-left-radius: 24px;
    border-bottom-left-radius: 24px;
    transform: rotate(-15deg);
    padding: 4px;
    text-align: center;
    color: white;
    background: radial-gradient(#FDB927 0%, black 60%);
}

.card_stats h4,
.card_stats h5{
    font-weight: bolder;
}

.card_stats:before {
    content: '';
    position: absolute;
    right: 0;
    top: 0;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 0 40px 12px;
    border-color: transparent black transparent;
    transform: translate(100%);
}

.card_body {
    width: 280px;
    height: 110px;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    position: absolute;
    bottom: 0;
    background: radial-gradient(#FDB927 -20%, black 75%);
    padding: 10px;
}

.card_body_row {
    display: flex;
    justify-content: space-between;
    width: 260px;
    height: 45px;
}

.card_info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 80px;
    height: 45px;
    text-align: center;
    color: white;
}

.card_info h4{
    font-weight: bolder;
}

.card_back_img {
    height: 430px;
    width: 300px;
    border-radius: 5px;
    overflow: hidden;
}

.card_back {
    position: absolute;
    height: 100%;
    width: 100%;
    background: black;
    line-height: 300px;
    text-align: center;
    font-size: 60px;
    border-radius: 5px;
    backface-visibility: hidden;
    transform: rotateY( 180deg );
}  

